clusters/home/apps/litellm/litellm/configs/litellm-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm-ingressroute
  namespace: litellm
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://litellm.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Litellm
    gethomepage.dev/group: AI
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: litellm # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Litellm
    #gethomepage.dev/widget.type: "litellm"
    #gethomepage.dev/widget.url: "https://litellm.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`litellm.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: litellm
      port: 4000
  tls:
    secretName: litellm-certificate-secret
